effect use npm token

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
                   effect-use:
                     npmAlwaysAuth: true
                     npmRegistryServer: "https://registry.npmjs.org"
-                    npmAuthToken: ${{ secrets.NPM_TOKEN }}' >> ~/.yarnrc.yml
+                    npmAuthToken: ${{ secrets.EFFECT_USE_NPM_TOKEN }}' >> ~/.yarnrc.yml
 
       - name: Install 📦
         run: yarn --immutable
@@ -62,5 +62,5 @@ jobs:
           publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.EFFECT_USE_NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.EFFECT_USE_NPM_TOKEN }}
