--- a/packages/aws-s3/package.json
+++ b/packages/aws-s3/package.json
@@ -36,6 +36,6 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   }
 }
