--- a/packages/gcp-gcs/package.json
+++ b/packages/gcp-gcs/package.json
@@ -34,6 +34,6 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   }
 }
