--- a/packages/gcp-logging/package.json
+++ b/packages/gcp-logging/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "dependencies": {
     "@effect/data": "^0.17.6",
