--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -30,7 +30,7 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "dependencies": {
     "@effect/data": "^0.17.6",
