temporal client npm public

--- a/packages/temporal-client/package.json
+++ b/packages/temporal-client/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
