--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.26.1",
+    "@temporalio/testing": "^1.8.5",
+    "@temporalio/worker": "^1.8.5",
     "@types/jest": "^29.5.1",
     "@types/node": "18",
     "jest": "29.5.0",
@@ -39,10 +41,10 @@
     "@effect/data": "^0.17.6",
     "@effect/io": "^0.38.2",
     "@effect/schema": "^0.33.2",
-    "@temporalio/activity": "1.7.4",
-    "@temporalio/worker": "1.7.4",
-    "@temporalio/workflow": "1.7.4",
-    "@temporalio/client": "1.7.4"
+    "@temporalio/activity": "1.8.5",
+    "@temporalio/worker": "1.8.5",
+    "@temporalio/workflow": "1.8.5",
+    "@temporalio/client": "1.8.5"
   },
   "publishConfig": {
     "access": "public"
