--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -36,7 +36,8 @@
     "@effect/data": "^0.18.5",
     "@effect/io": "^0.40.3",
     "@effect/schema": "^0.36.3",
-    "@types/node": "18"
+    "@types/node": "18",
+    "effect": "^2.0.0-next.44"
   },
   "main": "dist/index.js"
 }
