--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "resolutions": {
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
+    "effect": "2.0.0-next.48",
+    "@effect/schema": "0.43.0",
     "@temporalio/activity": "1.7.4",
     "@temporalio/worker": "1.7.4",
     "@temporalio/workflow": "1.7.4",
@@ -47,5 +46,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "dependencies": {
+    "@effect/schema": "0.43.0",
+    "effect": "2.0.0-next.48"
+  }
 }
