--- a/packages/aws-s3/package.json
+++ b/packages/aws-s3/package.json
@@ -4,9 +4,8 @@
   "packageManager": "yarn@3.5.1",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3"
+    "@effect/schema": "0.42.0",
+    "effect": "2.0.0-next.47"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
