--- a/packages/brex/package.json
+++ b/packages/brex/package.json
@@ -34,10 +34,9 @@
   },
   "dependencies": {
     "@effect-use/http-client": "workspace:^",
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
-    "@types/node": "18"
+    "@effect/schema": "0.42.0",
+    "@types/node": "18",
+    "effect": "2.0.0-next.47"
   },
   "main": "dist/index.js"
 }
