--- a/packages/gcp-gcs/package.json
+++ b/packages/gcp-gcs/package.json
@@ -3,10 +3,9 @@
   "version": "0.2.0",
   "packageManager": "yarn@3.5.1",
   "dependencies": {
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
-    "@google-cloud/storage": "^6.10.1"
+    "@effect/schema": "0.42.0",
+    "@google-cloud/storage": "^6.10.1",
+    "effect": "2.0.0-next.47"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
