--- a/packages/gcp-logging/package.json
+++ b/packages/gcp-logging/package.json
@@ -36,8 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3"
+    "@effect/schema": "0.42.0",
+    "effect": "2.0.0-next.47"
   }
 }
