--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -33,11 +33,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
+    "@effect/schema": "0.42.0",
     "@octokit/rest": "^20.0.1",
-    "@types/node": "18"
+    "@types/node": "18",
+    "effect": "2.0.0-next.47"
   },
   "main": "dist/index.js"
 }
