--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -33,11 +33,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
+    "@effect/schema": "0.42.0",
     "@types/node": "18",
-    "effect": "^2.0.0-next.44"
+    "effect": "2.0.0-next.47"
   },
   "main": "dist/index.js"
 }
