--- a/packages/temporal-client/package.json
+++ b/packages/temporal-client/package.json
@@ -28,10 +28,9 @@
   },
   "dependencies": {
     "@effect-use/temporal-config": "workspace:^",
-    "@effect/data": "^0.18.5",
-    "@effect/io": "^0.40.3",
-    "@effect/schema": "^0.36.3",
+    "@effect/schema": "0.42.0",
     "@temporalio/client": "1.7.4",
-    "@temporalio/workflow": "1.7.4"
+    "@temporalio/workflow": "1.7.4",
+    "effect": "2.0.0-next.47"
   }
 }
