--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "2.26.1",
-    "@temporalio/testing": "^1.8.5",
-    "@temporalio/worker": "^1.8.5",
+    "@temporalio/testing": "1.8.6",
+    "@temporalio/worker": "1.8.6",
     "@types/jest": "^29.5.1",
     "@types/node": "18",
     "jest": "29.5.0",
@@ -40,10 +40,10 @@
   "resolutions": {
     "effect": "2.0.0-next.48",
     "@effect/schema": "0.43.0",
-    "@temporalio/activity": "1.8.5",
-    "@temporalio/worker": "1.8.5",
-    "@temporalio/workflow": "1.8.5",
-    "@temporalio/client": "1.8.5"
+    "@temporalio/activity": "1.8.6",
+    "@temporalio/worker": "1.8.6",
+    "@temporalio/workflow": "1.8.6",
+    "@temporalio/client": "1.8.6"
   },
   "publishConfig": {
     "access": "public"
