--- a/packages/temporal-client/package.json
+++ b/packages/temporal-client/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "test": "jest",
+    "test": "jest --forceExit",
     "format": "prettier --write .",
     "clean": "rimraf node_modules & rimraf dist & rimraf .turbo",
     "typecheck": "tsc --noEmit"
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "@effect-use/temporal-config": "workspace:^",
-    "@effect/schema": "0.42.0",
-    "@temporalio/client": "1.7.4",
-    "@temporalio/workflow": "1.7.4",
-    "effect": "2.0.0-next.47"
+    "@effect/schema": "0.43.0",
+    "@temporalio/client": "1.8.6",
+    "@temporalio/workflow": "1.8.6",
+    "effect": "2.0.0-next.48"
   }
 }
