--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "url": "https://github.com/embedded-insurance/effect-use.git"
   },
   "resolutions": {
-    "effect": "2.0.0-next.61",
-    "@effect/schema": "0.55.0",
+    "effect": "2.2.3",
+    "@effect/schema": "0.61.5",
     "@temporalio/activity": "1.8.6",
     "@temporalio/worker": "1.8.6",
     "@temporalio/workflow": "1.8.6",
@@ -50,7 +50,7 @@
   },
   "main": "dist/index.js",
   "dependencies": {
-    "@effect/schema": "0.55.0",
-    "effect": "2.0.0-next.61"
+    "@effect/schema": "0.61.5",
+    "effect": "2.2.3"
   }
 }
