--- a/packages/brex/package.json
+++ b/packages/brex/package.json
@@ -4,6 +4,7 @@
   "packageManager": "yarn@3.5.1",
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@types/node": "20",
     "jest": "29.5.0",
     "prettier": "2.8.8",
     "ts-jest": "29.1.0",
@@ -34,9 +35,8 @@
   },
   "dependencies": {
     "@effect-use/http-client": "workspace:^",
-    "@effect/schema": "0.42.0",
-    "@types/node": "18",
-    "effect": "2.0.0-next.47"
+    "@effect/schema": "0.61.5",
+    "effect": "2.2.3"
   },
   "main": "dist/index.js"
 }
