--- a/packages/gcp-gcs/package.json
+++ b/packages/gcp-gcs/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0",
   "packageManager": "yarn@3.5.1",
   "dependencies": {
-    "@effect/schema": "0.42.0",
+    "@effect/schema": "0.61.5",
     "@google-cloud/storage": "^6.10.1",
-    "effect": "2.0.0-next.47",
+    "effect": "2.2.3",
     "tmp": "^0.2.1"
   },
   "main": "dist/index.js",
