--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -4,6 +4,7 @@
   "packageManager": "yarn@3.5.1",
   "devDependencies": {
     "@types/jest": "^29.5.2",
+    "@types/node": "20",
     "@types/uuid": "^9.0.1",
     "jest": "29.5.0",
     "ts-jest": "29.1.0",
@@ -33,9 +34,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@effect/schema": "0.42.0",
-    "@types/node": "18",
-    "effect": "2.0.0-next.47"
+    "@effect/schema": "0.61.5",
+    "effect": "2.2.3"
   },
   "main": "dist/index.js"
 }
