--- a/packages/temporal-client/package.json
+++ b/packages/temporal-client/package.json
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "@effect-use/temporal-config": "workspace:^",
-    "@effect/schema": "0.43.0",
+    "@effect/schema": "0.61.5",
     "@temporalio/client": "1.8.6",
     "@temporalio/workflow": "1.8.6",
-    "effect": "2.0.0-next.48"
+    "effect": "2.2.3"
   }
 }
