--- a/packages/temporal-config/package.json
+++ b/packages/temporal-config/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.0",
   "packageManager": "yarn@3.5.1",
   "dependencies": {
-    "@effect/schema": "0.42.0",
-    "effect": "2.0.0-next.47"
+    "@effect/schema": "0.61.5",
+    "effect": "2.2.3"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
